; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/mxs/extr_clk-ref.c_clk_ref_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/mxs/extr_clk-ref.c_clk_ref_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_ref = type { i32, i64 }

@CLR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @clk_ref_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_ref_enable(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.clk_ref*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %4 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %5 = call %struct.clk_ref* @to_clk_ref(%struct.clk_hw* %4)
  store %struct.clk_ref* %5, %struct.clk_ref** %3, align 8
  %6 = load %struct.clk_ref*, %struct.clk_ref** %3, align 8
  %7 = getelementptr inbounds %struct.clk_ref, %struct.clk_ref* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = add nsw i32 %8, 1
  %10 = mul nsw i32 %9, 8
  %11 = sub nsw i32 %10, 1
  %12 = shl i32 1, %11
  %13 = load %struct.clk_ref*, %struct.clk_ref** %3, align 8
  %14 = getelementptr inbounds %struct.clk_ref, %struct.clk_ref* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @CLR, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @writel_relaxed(i32 %12, i64 %17)
  ret i32 0
}

declare dso_local %struct.clk_ref* @to_clk_ref(%struct.clk_hw*) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
